_course_files/10 Service Entries/6-istio-rules.yaml
# Brings the external service at http://2oujlno5e4.execute-api.us-east-1.amazonaws.com
# into the Istio Service Mesh. We can now monitor this service and apply routing rules,
# short circuiting, etc.
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: fleetman-driver-monitoring
spec:
  hosts:
  - 2oujlno5e4.execute-api.us-east-1.amazonaws.com
  location: MESH_EXTERNAL
  ports:
  - number: 80
    name: http-port
    protocol: HTTP
  - number: 443
    name: https-port-for-tls-origination
    protocol: HTTPS
  resolution: DNS
---
# See case #23 - this is a legacy service that we're integrating with
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fleetman-driver-monitoring
spec:
  hosts:
  - 2oujlno5e4.execute-api.us-east-1.amazonaws.com
  http:
  - match:
    - uri :
        prefix: "/"
    route:
    - destination:
        host: google.com
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: fleetman-driver-monitoring
spec:
  host: 2oujlno5e4.execute-api.us-east-1.amazonaws.com
